offcanvas menu item spacing fix

--- a/wordpress/wp-content/themes/pfennings/src/sass/components/_nav.scss
+++ b/wordpress/wp-content/themes/pfennings/src/sass/components/_nav.scss
@@ -117,10 +117,10 @@ body.mm-menu-open {
 				color: $white;
 				font-size: 1.3em;
 				font-weight: 100;
-				line-height: em(30px);
+				line-height: 30px;
 				@include media($bp-large) {
 					font-size: 1.7em;
-					line-height: em(55px);
+					line-height: 55px;
 				}
 				text-decoration: none;
 				transition: background 0.5s, color 0.5s;
